--- a/.github/workflows/anac-rss.yml
+++ b/.github/workflows/anac-rss.yml
@@ -2,7 +2,7 @@ name: Fetch ANAC RSS
 
 on:
   schedule:
-    - cron: '0 */4 * * *'  # Executa a cada 4h
+    - cron: '0 */1 * * *'  # Executa a cada 1h
   workflow_dispatch:      # Permite execução manual
 
 jobs:
@@ -28,4 +28,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "📰 Atualiza notícias ANAC (JSON, RSS e HTML)"
-          file_pattern: data/*
+          file_pattern: 'data/*'
