--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -1,4 +1,4 @@
-name: Fetch ANAC RSS
+name: ANAC RSS
 
 on:
   schedule:
@@ -19,10 +19,7 @@ jobs:
           deno-version: v1.x
 
       - name: ▶️ Executar script Deno para gerar JSON e HTML
-        run: deno run --allow-net --allow-write deno/feed.ts
-      
-#      - name: 🛠️ Gerar RSS a partir do JSON
-#        run: deno run --allow-net --allow-write deno/json_to_rss.ts      
+        run: deno run --allow-net --allow-write deno/rss.ts    
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
