--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -11,7 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -22,7 +24,7 @@ jobs:
           deno-version: v1.x
 
       - name: ▶️ Executar script Deno
-        run: deno run --allow-net --allow-write --allow-read deno/rss.ts    
+        run: deno run --allow-net --allow-write deno/rss.ts    
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
